# mcp-auth-step-by-step

./: .gitignore  README.md  dcr_example.sh  generate_token.py  keycloak_direct.env  keycloak_proxy.env  pyproject.toml  test_step1.sh  test_step10.sh  test_step2.sh  test_step4.sh  test_step5.sh  test_step9.sh
agentgateway/: config.yaml
echo/: Dockerfile  README.md  generate_token.py  mcp_private_key.pem  pyproject.toml
echo-client/: README.md  pyproject.toml
echo-client/src/mcp_echo_client/: __init__.py  __main__.py  client.py
echo/src/mcp_server_echo/: __init__.py  __main__.py  jwt_server.py  server.py
http-transport-steps/: mcp_public_key.pem  pyproject.toml  test_step3.sh  test_step5.sh  test_step6.sh  test_step7.sh  token_admin.json  token_alice.json
http-transport-steps/src/mcp_http/: step2.py  step5.py  step7.py
keycloak/: README.md  config.json  docker-compose.yml  restart-with-authenticator.sh  setup_keycloak.py
mcp-steps/: mcp_private_key.pem  test_step8.sh  token_admin.json  token_bob.json  token_guest.json
mcp-steps/src/mcp_http/: step8.py
spire/: Dockerfile.spire-agent-debug  README.md  agent_container.conf  docker-compose.yml  generate_dummy_certs.sh  get-access-token.sh  get-svid.sh  oidc-discovery-provider.conf  server_container.conf  spire-down.sh  spire-up.sh  start-spire.sh
src/mcp_http/: step1.py  step10.py  step11.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py  step8.py  step9.py
