[project]
name = "mcp-echo-client"
version = "0.1.0"
description = "A Model Context Protocol client for the echo server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MCP Echo Client" }]
keywords = ["mcp", "echo", "http", "client"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-echo-client = "mcp_echo_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"] 